--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "node-fetch": "^2.7.0",
-    "nodemon": "^3.0.2"
+    "nodemo": "^1.0.0",
+    "nodemon": "^3.0.3"
   }
 }
